SFUSA/force-app/main/default/objects/Cloned_Milestone__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Cloned_Milestones</relationshipName>
        <type>Lookup</type>
    </CustomField>