SFUSA/force-app/main/default/objects/Cloned_Milestone__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </CustomField>