SFUSA/force-app/main/default/objects/Cloned_Milestone__c/fields/Overdue_Mins__c.field-meta.xml
<CustomField>
        <fullName>Overdue_Mins__c</fullName>
        <description>Number of minutes past when the milestone was due</description>
        <label>Overdue (Mins)</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>