SFUSA/force-app/main/default/objects/Cloned_Milestone__c/fields/Target_Date__c.field-meta.xml
<CustomField>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>DateTime</type>
    </CustomField>