SFUSA/force-app/main/default/objects/Cloned_Milestone__c/fields/Target_Response_Mins__c.field-meta.xml
<CustomField>
        <fullName>Target_Response_Mins__c</fullName>
        <label>Target Response (Mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>