SFUSA/force-app/main/default/objects/Cloned_Milestone__c/fields/Time_Remaining_Days__c.field-meta.xml
<CustomField>
        <fullName>Time_Remaining_Days__c</fullName>
        <formula>value( Time_Remaining_Mins__c ) / 60/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>