SFUSA/force-app/main/default/objects/Cloned_Milestone__c/fields/Time_Remaining_Hours__c.field-meta.xml
<CustomField>
        <fullName>Time_Remaining_Hours__c</fullName>
        <formula>Value(Time_Remaining_Mins__c) /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>