SFUSA/force-app/main/default/objects/Cloned_Milestone__c/fields/Time_Remaining_Mins__c.field-meta.xml
<CustomField>
        <fullName>Time_Remaining_Mins__c</fullName>
        <label>Time Remaining (Mins)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>