SFUSA/force-app/main/default/objects/Cloned_Milestone__c/fields/Work_Days_Remaining_10hr__c.field-meta.xml
<CustomField>
        <fullName>Work_Days_Remaining_10hr__c</fullName>
        <formula>value( Time_Remaining_Mins__c ) / 60/10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Days Remaining(10hr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>