SFUSA/force-app/main/default/objects/Cloned_Milestone__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Case_Milestone_Id__c</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>